<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Malaria</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="submit_new_report">Submit New Report</string>
    <string name="new_entry">New Entry</string>
    <string name="queued_entries">Queued Entries</string>
    <string name="sent_entries">Sent Entries</string>
    <string name="title_activity_new_report_patient_details">New Report</string>
    <string name="given_name">Given Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="take_photo">Take Photo</string>
    <string-array name="gender_array">
	    <item>Male</item>
	    <item>Female</item>
	</string-array>
    <string name="slide_number">Slide Number</string>

    <string name="title_activity_new_report">Submit New Report</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_photo">Add New Photo</string>
    <string name="birthday">Birthday</string>
    <string name="title_activity_fullscreen_photo"></string>
    <string name="delete">Delete</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="warning">Warning</string>
    <string name="new_report_cancel_warning">This report will be discarded. All progress including photos will be lost.</string>
    <string name="photo_delete_warning">This photo will be deleted. This action is irreversible.</string>
    <string name="ok">OK</string>
    <string name="empty_photos_message">Click the camera icon to add a new photo.</string>
    <string name="patient_details">Patient Details</string>
    <string name="slide_photos">Slide Photos</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="num_photos">No. of Photos</string>
    <string name="case_malaria">Case</string>
    <string-array name="case_array">
        <item>Uncomplicated</item>
        <item>Severe</item>
    </string-array>

    <string-array name="species_array">
        <item>Plasmodium falciparum</item>
        <item>Plasmodium vivax</item>
        <item>Plasmodium ovale</item>
        <item>Plasmodium malariae</item>
        <item>None</item>
    </string-array>

    <string name="drugs_given">Drugs given</string>
    <string name="exam_result">Exam result</string>
    <string name="get_treatment">Get Treatment</string>
    <string name="treatment">Treatment</string>
    <string name="remarks">Remarks</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="submit">Submit</string>
    <string name="summary">Summary</string>

    <string name="entry_name">Entry Name</string>
    <string name="date_created">Date Created</string>
    <string name="time_created">Time Created</string>
    <string name="date_sent">Date Sent</string>
    <string name="time_sent">Time Sent</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_queue_log">Queued Entries</string>
    <string name="title_activity_sent_log">Sent Entries</string>
    <string name="username">Username</string>

    <string name="home">Home</string>
    <string name="public_key_address">http://10.40.93.115/api/key/</string>
    <string name="server_send_address">http://10.40.93.115/api/send/</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="title_activity_picture">PictureActivity</string>
</resources>