<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".QueueLogActivity">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="30dp">

        <Spinner
                android:id="@+id/case_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>

        <Spinner
                android:id="@+id/species_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>

        <EditText
                android:id="@+id/exam_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/drugs_given"
                android:inputType="text"
                android:ems="10"/>

        <EditText
                android:id="@+id/exam_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/exam_result"
                android:inputType="text"
                android:ems="10"/>

        <EditText
                android:id="@+id/diagnostic_notes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine"
                android:hint="@string/remarks"
                android:ems="10"/>
    </LinearLayout>


</RelativeLayout>
