<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".QueueLogActivity">

    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:id="@+id/tableLayout">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/entry_name"
                    android:id="@+id/textView"
                    android:layout_column="0"/>

            <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_created"
                    android:id="@+id/textView2"
                    android:layout_column="1"/>

            <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_created"
                    android:id="@+id/textView3"
                    android:layout_column="2"/>

            <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/scrollView"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/tableLayout">

                <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                </TableLayout>
            </ScrollView>
        </TableRow>
    </TableLayout>

    <ImageView
            android:layout_width="60px"
            android:layout_height="100px"
            android:id="@+id/imageView"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/tableLayout"
            android:src="@drawable/home"
            android:onClick="goHome"/>

</RelativeLayout>
