<ViewFlipper
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/viewFlipper"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        tools:context=".NewReportActivity">

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
                  android:id="@+id/first_flip"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:paddingBottom="@dimen/activity_vertical_margin" >

        <EditText
                android:id="@+id/given_name_textfield"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_gravity="center_vertical"
                android:hint="@string/given_name"
                />

        <EditText
                android:id="@+id/middle_name_textfield"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_gravity="center_vertical"
                android:hint="@string/middle_name"
                />

        <EditText
                android:id="@+id/last_name_textfield"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_gravity="center_vertical"
                android:hint="@string/last_name"
                />

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

            <com.cajama.android.customviews.DateDisplayPicker
                    android:id="@+id/clientEditCreate_BirthDateDayPicker"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.Holo.Light.Spinner"
                    android:hint="@string/birthday"
                    android:layout_weight="3"/>

            <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:id="@+id/second_flip">

        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/new_report_photos_layout"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:verticalSpacing="5dp"
                  android:horizontalSpacing="5dp"
                  android:stretchMode="columnWidth"
                  android:numColumns="3"
                />

        <TextView
                android:id="@+id/empty_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_photos_message"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="30dp">


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diagnosis"
                android:textStyle="bold"
                android:id="@+id/textView"
                android:textSize="18dp"
                android:layout_gravity="left"/>

        <Spinner
                android:id="@+id/species_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>

        <TextView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_gravity="left"/>

        <EditText
                android:id="@+id/diagnostic_notes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ems="10"/>
    </LinearLayout>

    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:id="@+id/fourth_flip">
        <TableLayout
                android:layout_width="fill_parent"
                android:padding="50px"
                android:layout_height="fill_parent">

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Given Name:"
                        android:textStyle="bold"
                        android:paddingBottom="10px"
                        android:id="@+id/textView"/>

                <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>
            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Middle Name:"
                        android:id="@+id/textView9"/>

                <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>
            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Last Name:"
                        android:id="@+id/textView10"/>

                <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>
            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Birthday:"
                        android:id="@+id/textView11"/>

                <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>
            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sex:"
                        android:id="@+id/textView12"/>

                <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>
            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No. of Photos:"
                        android:id="@+id/textView14"/>

                <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>
            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Diagnosis:"
                        android:id="@+id/textView15"/>

                <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>

            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Notes:"
                        android:id="@+id/textView16"/>

                <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>

            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Date Created:"
                        android:id="@+id/textViewa"/>

                <TextView
                        android:id="@+id/textViewA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>

            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Time Created:"
                        android:id="@+id/textViewb"/>

                <TextView
                        android:id="@+id/textViewB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>

            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Latitude:"
                        android:id="@+id/textViewlat"/>

                <TextView
                        android:id="@+id/textViewLat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>

            </TableRow>

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Longitude:"
                        android:id="@+id/textViewlong"/>

                <TextView
                        android:id="@+id/textViewLong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"/>

            </TableRow>

        </TableLayout>
    </RelativeLayout>

    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:id="@+id/fifth_flip">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="50dp">

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    />

            <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:hint="Username"/>

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:padding="15dp"
                    android:layout_gravity="center"
                    android:hint="Password"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
        </LinearLayout>
    </RelativeLayout>

</ViewFlipper>